4-40-infrastructure-as-code/kubernetes/kubernetes-manifest.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
        - name: petclinic
          image: nezumish/petclinic:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 600
            periodSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "50m"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    tier: backend
  name: petclinic-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30000
  selector:
    tier: backend
  type: NodePort
