4-40-infrastructure-as-code/kubernetes/petclinic-service-kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: backend
  name: petclinic-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    tier: backend
