4-40-infrastructure-as-code/kubernetes/ingress-kubernetes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
spec:
  ingressClassName: nginx
  rules:
    host: localhost
    http:
      paths: /
    path:
    pathType: Prefix
    backend:
      service:
        name: petclinic-service
        port:
          number: 80
